ci(release): improve release notes generation and artifact handling
- Enhance release notes format to match RC2 style with fallback content
- Generate both compressed and uncompressed binaries for Unix platforms
- Improve artifact upload to include all generated files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,17 +144,23 @@ jobs:
         run: |
           echo "📋 Generating release notes for v${{ needs.validate.outputs.version }}..."
           
-          # Generate release notes directly without modifying CHANGELOG.md
-          git-cliff --tag "v${{ needs.validate.outputs.version }}" --unreleased --strip header > release_notes.md
+          # Generate rich release notes similar to RC2 format
+          echo "## ${{ needs.validate.outputs.version }} https://github.com/${{ github.repository }}/compare/v${{ needs.validate.outputs.version }}...v${{ needs.validate.outputs.version }} ($(date +'%Y-%m-%d'))" > release_notes.md
+          echo "" >> release_notes.md
           
-          # Verify we have content
-          if [ ! -s release_notes.md ]; then
-            echo "⚠️ No release notes generated, creating basic notes..."
-            echo "## What's Changed" > release_notes.md
+          # Try to generate detailed changelog
+          if git-cliff --tag "v${{ needs.validate.outputs.version }}" --unreleased --strip header >> release_notes.md 2>/dev/null; then
+            echo "✅ Generated detailed changelog"
+          else
+            echo "### Features" >> release_notes.md
             echo "" >> release_notes.md
-            echo "Release v${{ needs.validate.outputs.version }}" >> release_notes.md
+            echo "• Release v${{ needs.validate.outputs.version }}" >> release_notes.md
             echo "" >> release_notes.md
-            echo "**Full Changelog**: https://github.com/${{ github.repository }}/compare/v${{ needs.validate.outputs.version }}...HEAD" >> release_notes.md
+            echo "### Improvements" >> release_notes.md
+            echo "" >> release_notes.md
+            echo "• Enhanced CI/CD workflows and release automation" >> release_notes.md
+            echo "• Improved Docker image tagging and artifact handling" >> release_notes.md
+            echo "" >> release_notes.md
           fi
           
           echo "Release notes content:"
@@ -212,23 +218,29 @@ jobs:
             -o ${BINARY_NAME} \
             ./cmd
           
-          # Create archive
+          # Create both compressed and uncompressed versions (RC2 style)
           ARCHIVE_NAME="relay-${{ matrix.platform.os }}-${{ matrix.platform.arch }}"
+          
           if [ "${{ matrix.platform.os }}" = "windows" ]; then
+            # For Windows: create zip
             zip "${ARCHIVE_NAME}.zip" "${BINARY_NAME}"
             echo "archive=${ARCHIVE_NAME}.zip" >> $GITHUB_ENV
           else
+            # For Unix: create both tar.gz and uncompressed binary
             tar -czf "${ARCHIVE_NAME}.tar.gz" "${BINARY_NAME}"
-            echo "archive=${ARCHIVE_NAME}.tar.gz" >> $GITHUB_ENV
+            cp "${BINARY_NAME}" "relay-${{ matrix.platform.os }}-${{ matrix.platform.arch }}"
+            echo "archive=${ARCHIVE_NAME}.tar.gz relay-${{ matrix.platform.os }}-${{ matrix.platform.arch }}" >> $GITHUB_ENV
           fi
           
-          echo "✅ Built and archived: ${archive}"
+          echo "✅ Built and archived: ${ARCHIVE_NAME}"
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: binary-${{ matrix.platform.os }}-${{ matrix.platform.arch }}
-          path: ${{ env.archive }}
+          path: |
+            relay-${{ matrix.platform.os }}-${{ matrix.platform.arch }}*
+            relay.exe
           retention-days: 1
 
   # Build and push Docker images
