fix(ci): comprehensive CI/CD workflow improvements and release process fixes
🔧 Release Process Fixes:
- Fix release title format (remove 'Release' prefix for consistent naming)
- Improve release notes generation with better fallback logic
- Fix binary artifact upload to include both compressed and uncompressed files
- Update CHANGELOG.md during release process to convert Unreleased section
- Fix repository references in cliff.toml (Relay -> relay)

🛠️ Workflow Improvements:
- Standardize action versions across all workflows with commit SHA pins
- Fix CodeQL workflow to only target main branch (remove non-existent develop)
- Fix Docker security scan to use proper Dockerfile targets
- Improve changelog workflow integration with release process
- Add explicit cliff.toml config usage in changelog generation

🔒 Security & Quality:
- Maintain comprehensive security scanning (CodeQL, Trivy, gosec, govulncheck)
- Keep SARIF integration for security results
- Preserve multi-platform build verification
- Maintain proper permissions for all workflows

📋 Configuration Updates:
- Fix git-cliff repository references for consistent URL generation
- Improve workflow coordination between changelog and release processes
- Maintain backward compatibility with existing processes

These changes address the release artifact and description issues seen in v1.3.3-rc.3
compared to the working v1.3.3-rc.2 release format.

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -127,8 +127,8 @@ jobs:
           # Create backup of current changelog
           cp ${{ env.CHANGELOG_FILE }} ${{ env.CHANGELOG_FILE }}.backup
           
-          # Generate new changelog with unreleased entries
-          git-cliff --unreleased --prepend ${{ env.CHANGELOG_FILE }}
+          # Generate new changelog with unreleased entries using updated cliff.toml
+          git-cliff --config cliff.toml --unreleased --prepend ${{ env.CHANGELOG_FILE }}
           
           # Verify the changelog was updated
           if ! diff -q ${{ env.CHANGELOG_FILE }} ${{ env.CHANGELOG_FILE }}.backup > /dev/null; then
